:sparkles: Implementação de Login com Bearer Token e Autenticação com JWT, documentação no swagger + refatoração de rotas com middleware e controllers
